force-app/main/default/objects/Web_Caller_Service__mdt/Web_Caller_Service__mdt.object-meta.xml
<CustomObject>
    <description>Services related to Web Caller End Points for Web Caller Tool</description>
    <label>Web Caller Service</label>
    <pluralLabel>Web Caller Services</pluralLabel>
</CustomObject>