force-app/main/default/objects/Web_Caller_Service__mdt/fields/APEX_Outbound_Class__c.field-meta.xml
<CustomField>
    <fullName>APEX_Outbound_Class__c</fullName>
    <description>Name of the APEX handler class implementing the WebCaller.Outbound interface</description>
    <inlineHelpText>Name of the APEX handler class implementing the WebCaller.Outbound interface</inlineHelpText>
    <label>APEX Outbound Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>