force-app/main/default/objects/Web_Caller_Service__mdt/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <description>Body for Request - will be added to URI if GET, added to Body if POST.  Should include replacement tags (see Tagging methods in documentation)</description>
    <inlineHelpText>Body for Request - will be added to URI if GET, added to Body if POST.  Should include replacement tags (see Tagging methods in documentation)</inlineHelpText>
    <label>Data</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>