force-app/main/default/objects/Web_Caller_Service__mdt/fields/Path__c.field-meta.xml
<CustomField>
    <fullName>Path__c</fullName>
    <description>Path as part of URL for Service</description>
    <inlineHelpText>Path as part of URL for Service</inlineHelpText>
    <label>Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>