force-app/main/default/objects/Web_Caller_Service__mdt/fields/Web_Caller_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Web_Caller_Endpoint__c</fullName>
    <description>Related End Point for Service</description>
    <inlineHelpText>Related End Point for Service</inlineHelpText>
    <label>Web Caller Endpoint</label>
    <referenceTo>Web_Caller_Endpoint__mdt</referenceTo>
    <relationshipLabel>Web Caller Services</relationshipLabel>
    <relationshipName>Web_Caller_Services</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>